2004-10-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/kpath.cc (LY_DEFINE): ly_kpathsea_expand_variable. New
	function.

2004-10-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-tex.scm (convert-to-dvi): set extra_mem_top to 1M.
 
2004-10-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/slur-scoring.cc (struct Slur_score_state): add
	has_same_beam_, edge_has_beams_, is_broken_ bools.
	(get_base_attachments): simpler Y attachment determination for
	broken slurs.

2004-10-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/texi2omf.py: Add hashbang.  Starting the script in
	bash without that is quite interesting.  Add xml and some omf
	keys.

2004-10-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/macros.itexi: Add xml macros.

	* Documentation/user/GNUmakefile (extra-local-help): Add xml rules.

	* stepmake/stepmake/texinfo-vars.make (GENERATE_OMF): Fix location.

2004-10-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/break-substitution.cc (substitute_mutable_property_alist):
	only put property back into value if != SCM_UNDEFINED

	* lily/lyric-extender.cc (print): don't take common refpoint of
	null object if right_text isn't there.
 
	* lily/slur-scoring.cc (struct Slur_score_state): new
	struct. Collect scoring function arguments.
	(struct Slur_score_state): add musical_dy_
	(get_extra_encompass_infos): new function. Split off state computations.

	* scm/part-combiner.scm (determine-split-list): remove playing1
	and playing2.

2004-10-02  Graham Percival  <gperlist@shaw.ca>

	* Documentation/index.html.in: remove link to templates.

	* Documentation/user/notation.itely: more small fixes.

2004-10-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/timing-engraver.cc (process_music): move setting
	measure-length. This fixes spacing-whole-rest.ly

	* VERSION (PACKAGE_NAME): release 2.3.20
	
	* input/regression/quote-transposition.ly: update example

	* scm/define-music-properties.scm (all-music-properties): change